# curriculum-harness

./: .env.example  .gitignore  PROMPT_STANDARDS.md  README.md  STATE.md  VALIDITY.md  pyproject.toml
configs/: england_nc_english_ks1_to_ks3_2026_05_11_v1.json  england_nc_english_ks1_to_ks3_2026_05_11_v2.json  gcse_aqa_history_v1_0.json  ontario_grade7_history_v1_0.json  ontario_session3d_e2e.json  palya_felveteli_2026_04_17_v1_0.json  uk_national_curriculum_history_v1_0.json  university_history_syllabus_v1_0.json
curriculum_harness/: _anthropic.py  graph.py  source_bullets.py  source_faithfulness.py  state.py  types.py
curriculum_harness/phases/: phase1_ingestion.py  phase3_kud.py  phase4_lt_generation.py
curriculum_harness/reference_authoring/: README.md  __init__.py  types.py
docs/audits/: state-audit-2026-04-19-v1.md
docs/comparison-content/: absence-claims-log.md  audit-policy.md  centre-of-gravity-briefs.md  level-1-essay.md  source-manifest.md
docs/diagnostics/: 2026-04-17-session-1-diagnosis.md  (+13 more)
eval/: __init__.py  source_evidence_matcher.py  test_matcher.py
kaku_decomposer/: __init__.py  _anthropic.py  graph.py  output_naming.py  run.py  state.py  types.py
scripts/: build_unified_wellbeing_v5.py  build_visualisation_data.py  comparison_content_audit.py  generate_casel_band_tagged.py  generate_circle_solutions_band_tagged.py  generate_criterion_bank.py  generate_criterion_bank_4c4b.py  generate_real_wellbeing.py  preflight.py  test_criterion_bank_adversarial.py  verify_developmental_scope_7sources.py
tests/: test_criterion_gates_adversarial.py  test_phase3_exam_spec_refusal.py  test_phase4_regen_loop.py  test_reference_authoring_band_prompts_progression.py  test_reference_authoring_progression_detection.py  test_source_bullets.py  test_source_faithfulness.py  test_strand_detection_adversarial.py  test_v13_lt_format.py
(+457 files in other folders)
