[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curriculum-harness"
version = "0.1.0"
description = "LangGraph pipeline: curriculum documents → KUD framework and learning targets (Claude + Education Skills MCP)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "cryptography>=3.1",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pdfplumber>=0.11.0",
    "playwright>=1.50.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["curriculum_harness"]

[tool.hatch.build.targets.sdist]
include = ["curriculum_harness", "configs", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
markers = [
    "integration: full pipeline tests requiring ANTHROPIC_API_KEY and network",
]
testpaths = ["tests"]
